# Pit-Wall-Pro

./: .env  .gitignore  ACCOMPLISHMENTS.md  API_ENDPOINT_EXAMPLES.md  API_INTEGRATION_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  ESPN_F1_API_MAPPING.md  FASTF1_API_REFERENCE.md  FRONTEND_COMPLETE.md  FRONTEND_TECH_STACK.md  GETTING_STARTED.md  LICENSE  NEXT_CHAT_CONTEXT.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  add_fastf1_tables.sql  docker-compose.yml  fastf1_test.ipynb  fix-frontend.sh  pyproject.toml  setup-frontend.sh  setup.ps1  setup.sh  test_session_endpoint.py
backend/app/: main.py
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  FASTF1_API_MAPPING.md  FRONTEND_SETUP.md  GETTING_STARTED.md
examples/: example_espn.py  example_fastf1_race.py  quick_start.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: CountryFlag.tsx  DriverSelector.tsx  EnhancedRaceResults.tsx  RaceEvents.tsx  SectionHeader.tsx  TrackMap.tsx
frontend/hooks/: use-driver-details.ts  use-lap-times.ts  use-race-events.ts  use-race-results.ts  use-schedule.ts  (+2 more)
scripts/: README.md  backfill_race_positions.py  backfill_race_stats.py  fix_driver_names.py  migrate_to_espn_ids.py  populate_all_races.py  populate_db.py  populate_drivers.py  populate_espn_all.py  populate_espn_complete.py  populate_espn_fast.py  populate_espn_final.py  populate_races.py  populate_seasons.py  populate_team_logos.py  update_db.py  update_team_logos_manual.py
(+47 files in other folders)
