[project]
name = "f1-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Kamer", email = "alexkamer82@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.122.0",
    "fastf1>=3.7.0",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
